--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 jiter==0.8.2
 lxml==5.3.0
 makefun==1.15.6
@@ -38,13 +39,17 @@ Mako==1.3.8
 MarkupSafe==3.0.2
 multidict==6.1.0
 openai==1.60.1
+packaging==25.0
+pluggy==1.6.0
 propcache==0.2.1
 pwdlib==0.2.1
 pycparser==2.22
 pydantic==2.10.3
 pydantic_core==2.27.1
+Pygments==2.19.2
 PyJWT==2.9.0
 pyparsing==3.2.0
+pytest==8.4.1
 python-dotenv==1.0.1
 python-multipart==0.0.17
 redis==5.2.1
