--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8006:8006"
     environment:
-      - DATABASE_URL=${DATABASE_URL}
+      - DATABASE_URL=postgresql+asyncpg://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${DB_NAME}
     depends_on:
       - db
       - redis
@@ -18,18 +18,23 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASS}
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - melon2pgdata:/var/lib/postgresql/data
     
-
   redis:
     image: redis:7
     container_name: redis-melon
     ports:
       - "6379:6379"
 
+  redis_gui:
+    image: redis/redisinsight
+    container_name: redis-interface
+    ports:
+      - "5540:5540"
+
 volumes:
-  pgdata:
+  melon2pgdata:
